--- a/capstone_report.tex
+++ b/capstone_report.tex
@@ -110,6 +110,7 @@
 \subfile{designdevelopment.tex}
 \subfile{implementation.tex}
 \subfile{results.tex}
+\subfile{conclusion.tex}
 
 \bibliography{capstone_bib}{}
 \bibliographystyle{IEEEtran}
